--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,17 +19,11 @@ h1, h2 {
     text-transform: uppercase;
     letter-spacing: 4px
     color: #252525;
-    /*
-    position: absolute;
-    */
 }
 
 #logo {
     float: left;
     font-size: 280%;
-    /*
-    position: absolute;
-    */
 }
 
 /*navigation links*/
@@ -52,7 +46,6 @@ h1, h2 {
 #menu a {
     text-decoration: none;
     color: inherit;
-    
 }
 
 #menu a:hover {
@@ -65,10 +58,16 @@ h1, h2 {
 
 /* hero image */
 
-hero-outer {
+#hero-outer {
     height: 600px;
     width: 100%;
     overflow: hidden;
+
+    position: relative;
+}
+
+#cover-text, #cover-text h2 {
+    color: #fff;
 }
 
 #hero-image {
@@ -76,10 +75,10 @@ hero-outer {
     width: 100%;
     background: url(../images/hero-image.webp) no-repeat center center;
     
+    /*
     position: relative;
-    
     z-index: -2;
-
+    */
     /* animates zoom effect on loading page */
     animation-name: hero-zoom;
     animation-duration: 5s;
@@ -97,3 +96,25 @@ hero-outer {
     }
 }
 
+
+#cover-text {
+    font-size: 130%;
+    font-family: Oswald, sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 4px;
+
+    width: 400px;
+    height: 200px;
+
+    padding-top: 40px;
+    padding-left: 10px;
+
+    background-color: rgba(241, 109, 107, .7);
+
+    bottom: 30px;
+    right: 150px;
+    position: absolute;
+    /*
+    z-index: 0;
+    */
+}
